--- a/index.html
+++ b/index.html
@@ -353,10 +353,7 @@
       <footer id="main-footer" class="p-5 bg-dark text-white">
         <div class="row">
           <div class="col-md-6">
-            <a
-              download="./files/resume.PDF"
-              href=""
-              class="btn btn-outline-light"
+            <a href="./files/resume.PDF" class="btn btn-outline-light"
               ><i class="fas fa-cloud"></i>Download Resume</a
             >
           </div>
