--- a/index.html
+++ b/index.html
@@ -197,86 +197,23 @@
 
           <div class="row no-gutters">
             <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=252"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=252"
-                  alt=""
-                  class="img-fluid"
+              <a href="/img/tactical1.jpeg" data-toggle="lightbox"
+                ><img src="/img/tactical1.jpeg" alt="" class="img-fluid"
               /></a>
             </div>
             <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=253"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=253"
-                  alt=""
-                  class="img-fluid"
+              <a href="/img/tactical2.jpeg" data-toggle="lightbox"
+                ><img src="/img/tactical2.jpeg" alt="" class="img-fluid"
               /></a>
             </div>
             <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=254"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=254"
-                  alt=""
-                  class="img-fluid"
+              <a href="/img/tactical3.jpeg" data-toggle="lightbox"
+                ><img src="/img/tactical3.jpeg" alt="" class="img-fluid"
               /></a>
             </div>
             <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=255"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=255"
-                  alt=""
-                  class="img-fluid"
-              /></a>
-            </div>
-          </div>
-
-          <div class="row no-gutters">
-            <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=256"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=256"
-                  alt=""
-                  class="img-fluid"
-              /></a>
-            </div>
-            <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=257"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=257"
-                  alt=""
-                  class="img-fluid"
-              /></a>
-            </div>
-            <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=258"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=258"
-                  alt=""
-                  class="img-fluid"
-              /></a>
-            </div>
-            <div class="col-md-3">
-              <a
-                href="https://unsplash.it/1200/768.jpg?image=259"
-                data-toggle="lightbox"
-                ><img
-                  src="https://unsplash.it/600.jpg?image=259"
-                  alt=""
-                  class="img-fluid"
+              <a href="/img/tactical4.jpeg" data-toggle="lightbox"
+                ><img src="/img/tactical4.jpeg" alt="" class="img-fluid"
               /></a>
             </div>
           </div>
